feat: use osv only service
Signed-off-by: Ruben Romero Montes <rromerom@redhat.com>